@@ -1,5 +1,13 @@
 2005-11-04  Wim Taymans  <wim@fluendo.com>
 
+	* gst/gstbus.c: (gst_bus_post), (gst_bus_set_sync_handler):
+	Don't leak a mutex unlock in case of an error.
+
+	* gst/gstbus.h:
+	Doc fixes.
+
+2005-11-04  Wim Taymans  <wim@fluendo.com>
+
 	* gst/gstbus.c: (gst_bus_class_init), (gst_bus_init),
 	(gst_bus_post):
 	Get the context to wake up only once.
